# memcp

./: .gitignore  CLAUDE.md  LAYOUT.md  LICENSE  Makefile  README.md  alire.toml  gnat.adc  memcp.gpr
.github/workflows/: ci.yml  proof-cache-refresh.yml  prove.yml
crates/candle_spark/: .gitignore  alire.toml  candle_spark.gpr
crates/candle_spark/candle_ffi/: Cargo.toml
crates/candle_spark/candle_ffi/src/: lib.rs
crates/spark_mcp/: .gitignore  alire.toml  spark_mcp.gpr  spark_mcp_prove.gpr
crates/spark_mcp/rust/: Cargo.toml
crates/spark_mcp/rust/src/: lib.rs
crates/sqlite_vec_spark/: .gitignore  alire.toml  sqlite_vec_spark.gpr
docs/design/: 0005-needs-reclamation.md  0006-parallel-proof-memcached.md
scripts/: check-proof.sh  proof-xfail.txt
scripts/hooks/: session_end.sh  session_start.sh
src/: main.adb  memcp-env.adb  memcp-env.ads  memcp-envelope.adb  memcp-envelope.ads  memcp-extractor.adb  memcp-extractor.ads  memcp-json.adb  memcp-json.ads  memcp-log.adb  memcp-log.ads  memcp-replay.adb  memcp-replay.ads  memcp-resources.adb  memcp-resources.ads  memcp-store.adb  memcp-store.ads  memcp-text.adb  memcp-text.ads  memcp-tools.adb  memcp-tools.ads  memcp.adb  memcp.ads  memcp_env.adb  memcp_env.ads  memcp_envelope.adb  memcp_envelope.ads  memcp_extractor.adb  memcp_extractor.ads  memcp_json.adb  memcp_json.ads  memcp_log.adb  memcp_log.ads  memcp_replay.adb  memcp_replay.ads  memcp_resources.adb  memcp_resources.ads  memcp_store.adb  memcp_store.ads  memcp_text.adb  (+3 more)
tests/: memcp_tests.gpr
tests/src/: test_dispatch.adb  test_store.adb  (+1 more)
(+31 files in other folders)
