[package]
name = "spark_mcp_http_rs"
version = "0.1.0"
edition = "2021"
publish = false

# Static archive linked into the Ada executable. Ada owns `main` and calls
# `mcp_serve`; Rust owns socket I/O + HTTP framing and never parses the JSON.
[lib]
name = "spark_mcp_http_rs"
crate-type = ["staticlib"]

[dependencies]
tiny_http = "0.12"

[profile.release]
opt-level = 3
